--- a/src/Pages/Dashbaord/GenratedImages/style.css
+++ b/src/Pages/Dashbaord/GenratedImages/style.css
@@ -53,7 +53,7 @@
   width: 40px;
   height: 40px;
   border-radius: 50%;
-  background-color: rgb(255, 204, 74);
+  background-color: black;
   color: white;
   border: none;
   cursor: pointer;
