--- a/src/Components/Modals/EditAndDeleteUserModals/style.css
+++ b/src/Components/Modals/EditAndDeleteUserModals/style.css
@@ -11,6 +11,8 @@
   align-items: center;
   z-index: 1000; /* Ensure it's above other content */
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  padding-left: 1em;
+  padding-right: 1em;
 }
 
 .modal-content {
