--- a/src/Components/Sidebar/style.css
+++ b/src/Components/Sidebar/style.css
@@ -106,6 +106,6 @@
      width : 100%;
   }
   .brand-sub-text {
-    display: none; /* Hide sub-text on smaller screens for space */
+    display: none; 
   }
 }
